--- a/package.json
+++ b/package.json
@@ -27,17 +27,22 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/schema-ast": "^2.4.0",
+    "@graphql-codegen/typescript-resolvers": "^2.4.2",
+    "@graphql-codegen/typescript": "^2.4.1",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint": "^8.5.0",
+    "graphql": "^16.2.0",
     "pm2": "^5.1.2",
-    "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "ultra-runner": "^3.10.5"
   }
