--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "lint:ts": "tsc --noEmit"
   },
   "proxy": "http://localhost:4000",
   "dependencies": {
@@ -20,6 +22,8 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "graphql": "^16.2.0",
+    "graphql-tag": "^2.12.6",
     "react-scripts": "5.0.0"
   },
   "browserslist": {
