--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "app"
   ],
   "scripts": {
-    "up": "pm2 start ecosystem.config.js",
+    "up": "rm -rf logs && pm2 start ecosystem.config.js",
     "down": "pm2 delete ecosystem.config.js",
-    "restart": "pm2 delete ecosystem.config.js && pm2 start ecosystem.config.js",
+    "restart": "npm run down && npm run up",
     "log": "pm2 log",
     "list": "pm2 ls",
     "codegen": "npm run codegen -w api && npm run codegen -w app",
@@ -29,20 +29,22 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/schema-ast": "^2.4.0",
-    "@graphql-codegen/typescript-resolvers": "^2.4.2",
     "@graphql-codegen/typescript": "^2.4.1",
+    "@graphql-codegen/typescript-document-nodes": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "^2.2.2",
+    "@graphql-codegen/typescript-resolvers": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint": "^8.5.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "graphql": "^16.2.0",
     "pm2": "^5.1.2",
-    "prettier-plugin-organize-imports": "^2.3.4",
     "prettier": "^2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "typescript": "^4.5.4",
     "ultra-runner": "^3.10.5"
   }
