--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "watch": "tsc -w --pretty --preserveWatchOutput",
     "dev": "node --inspect=0.0.0.0:9229 --enable-source-maps --no-lazy ./dist/src",
     "codegen": "graphql-codegen --config codegen.yml",
-    "lint:ts": "tsc"
+    "lint:ts": "tsc --noEmit"
   },
   "dependencies": {
     "@graphql-tools/schema": "^8.3.1",
