--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,12 +8,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "~/generated/*": ["./generated/*"],
-      "~/*": ["./src/*"]
-    }
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
