--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "baseUrl": ".",
+    "experimentalDecorators": true,
     "outDir": "dist",
     "sourceMap": true
   }
