--- a/api/package.json
+++ b/api/package.json
@@ -1,23 +1,22 @@
 {
   "name": "@the-freelancer-interview-project/api",
+  "main": "./dist/index.js",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "watch": "tsc -w --pretty --preserveWatchOutput",
+    "build": "tsc",
     "dev": "node --inspect=0.0.0.0:9229 --enable-source-maps --no-lazy ./dist/src",
-    "codegen": "graphql-codegen --config codegen.yml",
     "lint:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@graphql-tools/schema": "^8.3.1",
-    "graphql": "^16.2.0",
-    "graphql-tag": "^2.12.6",
-    "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
-    "winston": "^3.3.4"
+    "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.5"
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.2",
+    "typescript": "^4.5.5"
   }
 }
